gcc/testsuite/rust/rustc/ui/parser/issue-62546.rs
pub t(#
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } }

